--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+	</head>
+	<body>
+    <!-- modal message -->
+    <div class="overlay">
+			<div class="modal">
+				<p>Something imaginary,</p>
+				<h2>YOU WON!</h2>
+				<button id="again" onclick="overlay(); reload()">Swim again?</button>
+			</div>
+		</div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-</body>
+	</body>
 </html>
