Modify reload, overlay code then onclick markup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="modal">
 				<p>Something imaginary,</p>
 				<h2>YOU WON!</h2>
-				<button id="again" onclick="overlay(); reload()">Swim again?</button>
+				<button id="again" onclick="player.overlay(); player.reload()">Swim again?</button>
 			</div>
 		</div>
 
